compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__string_prefix.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" ++ name -> name\n    _ -> \"Unknown\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " ++ name -> name
    _ -> "Unknown"
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.startsWith("Hello, ")) {
    let name = x.slice(7);
    return name;
  } else {
    return "Unknown";
  }
}
