compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__string_prefix_shadowing.snap
---
source: compiler-core/src/javascript/tests/strings.rs
assertion_line: 201
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as x ++ name -> x\n    _ -> \"Unknown\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    "Hello, " as x ++ name -> x
    _ -> "Unknown"
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.startsWith("Hello, ")) {
    let name = x.slice(7);
    let x$1 = "Hello, ";
    return x$1;
  } else {
    return "Unknown";
  }
}
