compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__unicode1.snap
---
source: compiler-core/src/javascript/tests/strings.rs
assertion_line: 5
expression: "\npub fn emoji() -> String {\n  \"\\u{1f600}\"\n}\n"
---
----- SOURCE CODE

pub fn emoji() -> String {
  "\u{1f600}"
}


----- COMPILED JAVASCRIPT
export function emoji() {
  return "\u{1f600}";
}
